# qalc

./: LICENSE  README.md  pyproject.toml
q_calc/: __init__.py  parser.py
tests/: test_g_calc.py  test_q_calc.py  test_qalc.py
